TODO
* tests
  - clean up stdout/stderr
* thread pool
  - fix winapi version
  - add winapi TP_POOL implemenation
* condition
  - add more tests
* have local library be dependent on HAVE_MULTI_THREAD_SUPPORT
* add macros for locking ? or have fallback dummy locks ?
* add try grab function
  - lock ?
  - read/write
* reimplement repeating thread as a queued thread?
* add glib support

20141014
* changes for deployment

20141010
* worked on utility scripts

20141001
* worked on stand-alone libcstring support

20140915
* changes for project site move

20140730
* updated dpkg files

20140505
* fixes to build static library with mingw and cygwin

20140105
* updated dependencies
* 2014 update
* updated man pages

20131017
* updated dependencies

20131003
* Bug fixes for RW lock XP version, with thanks to Phillip Hellewell

20130723
* bug fixes for Vista build

20130609
* fix in .pc.in file

20130509
* worked on thread pool

20130508
* worked on queue
* worked on thread pool

20130507
* worked on condition
* worked on queue
* reintroduced lock, need to distinguish between critical section
  and mutex on WINAPI for condition
* removed INSTALL from git version
* updated msvscpp files
* moved repeating thread into thread pool

20130506
* worked on condition
* worked on repeating thread
* removed lock in favor of mutex
* worked on queue

20130505
* worked on thread
* worked on thread attributes
* worked on thread pool
* worked on mutex
* worked on repeating thread

20130503
* Initial version based rename of libcmulti
* Worked on stand-alone version
* Worked on read/write lock
